Copywriting: better introduction to CoC

--- a/site.html
+++ b/site.html
@@ -27,8 +27,8 @@ layout: default
 			<div class="single-measure">
 				<h4>For who?</h4>
 				<p>Basically for everyone. The level of difficulty of <a href="">our curriculum</a> ranges from beginner to advanced, so there's something for everyone to learn.</p>
-				<p>With everyone, we mean everyone. To make sure everyone will be able to feel at home, we have created a code of conduct. The shortest version is: Don't be a jerk, be excellent to eachother.</p>
-				<p>Longer version of our code of conduct can be found <a href="code-of-conduct">here</a></p>
+				<p>With everyone, we mean everyone. To make sure everyone is able to feel welcome and safe, we have created a <a href="code-of-conduct">code of conduct</a>. The shortest version is: Don't be a jerk, be excellent to eachother.</p>
+				<p>The longer version of our <a href="code-of-conduct">code of conduct</a> provides a more subtle and elaborate perspective on our point of view.</p>
 			</div>
 		</div>
 		<div class="yellow-bar">
