--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
-<html lang="en">
-  <head>
-    <script>
-      window.location = 'http://www.meetup.com/nodeschool-amsterdam';
-    </script>
-  </head>
-</html>
+---
+layout: default
+---
+<div class="main">
+	<section>
+		<div class="section typeset">
+			<div class="single-measure">
+				<h1>NodeSchool Amsterdam</h1>
+				<h4>Open source workshops that teach web software skills.</h4>
+			</div>
+		</div>
+		<div class="section typeset aside">
+			<div class="single-measure centered">
+				<img class="logo" src="resources/logo/nodeschool-amsterdam-shadow.png">
+			</div>
+		</div>
+		<div class="yellow-bar">
+			<div class="section typeset">
+				<div class="single-measure">
+					<h4>Workshops</h4>
+					<p>We host free to attend workshops, in which <a href="http://nodeschool.io/#workshoppers">workshoppers</a> are used as curriculum and mentors help attendees work through the challenges. We host NodeSchool in Amsterdam at least once a month.*</p>
+					<p class="caption">* Well, we try to host >1 per month.</p>
+				</div>
+			</div>
+		</div>
+		<div class="section typeset">
+			<div class="single-measure">
+				<h4>For who?</h4>
+				<p>Basically for everyone. The level of difficulty of <a href="">our curriculum</a> ranges from beginner to advanced, so there's something for everyone to learn.</p>
+				<p>With everyone, we mean everyone. To make sure everyone is able to feel welcome and safe, we have created a <a href="code-of-conduct">code of conduct</a>. The shortest version is: Don't be a jerk, be excellent to eachother.</p>
+				<p>The longer version of our <a href="code-of-conduct">code of conduct</a> provides a more subtle and elaborate perspective on our point of view.</p>
+			</div>
+		</div>
+		<div class="yellow-bar">
+			<div class="section typeset">
+				<div class="single-measure">
+					<h4>
+						Interested in learning Node.js?
+					</h4>
+					<p>If you'd like to learn Node.js head over to <a href="https://meetup.com/nodeschool-amsterdam">https://meetup.com/nodeschool-amsterdam</a>, join our community and stay informed when the next meetup will be!</p>
+				</div>
+			</div>
+		</div>
+		{% include footer.html %}
+	</section>
+</div>
