Added a new slide, updated others.

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -42,6 +42,11 @@
 	         data-separator-vertical="^\n\n"
 	         data-separator-notes="^Note:">
 				</section>
+				<section data-transition="slide-in fade-out" data-markdown="markdown/team-up.md"
+	         data-separator="^\n\n\n"
+	         data-separator-vertical="^\n\n"
+	         data-separator-notes="^Note:">
+				</section>
 			</div>
 		</div>
 
