--- a/presentations/get-prepped.html
+++ b/presentations/get-prepped.html
@@ -197,6 +197,7 @@
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+				loop: true,
 				controls: false,
 				progress: false,
 				history: false,
