Adds nodejs-interactive page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ layout: default
 			<div class="single-measure">
 				<h1>NodeSchool Amsterdam</h1>
 				<h4>Open source workshops that teach web software skills.</h4>
+				<br>
+				<h4>⚡ <a href="nodejs-interactive" class="link">Node.js Interactive Europe 2016 x NodeSchool</a> ⚡</h4>
 			</div>
 		</div>
 		<div class="section typeset aside">
