Adds descriptions to nodejs int workshopper names

--- a/nodejs-interactive/index.html
+++ b/nodejs-interactive/index.html
@@ -31,11 +31,21 @@ layout: default
 			<div class="single-measure">
 				<p>In order to participate you'll need to bring your own laptop. This session of NodeSchool will include
 these workshoppers:</p>
+
+<p>9:00am - 12:20pm </p>
 <ul>
-	<li>9:00am - 12:20pm  <strong><a href="https://github.com/substack/stream-adventure">stream-adventure</a> + <a href="https://github.com/mikaelbr/bacon-love">bacon-love</a></strong>
-	</li>
-	<li>1:40pm - 3:50pm <strong><a href="https://github.com/sporto/planetproto">planet-proto</a> + <a href="https://github.com/workshopper/goingnative">going-native</a></strong>
-	</li>
+	<li>
+	<code><a href="https://github.com/substack/stream-adventure">stream-adventure</a></code>: Learn to compose streaming interfaces.</li>
+	<li>
+	<code><a href="https://github.com/mikaelbr/bacon-love">bacon-love</a></code>: Learn concepts of Functional and Reactive Programming using Bacon.js.</li>
+</ul>
+
+<p>1:40pm - 3:50pm</p>
+<ul>
+	<li>
+	<code><a href="https://github.com/sporto/planetproto">planet-proto</a></code>: Understanding JavaScript Prototypes.</li>
+	<li>
+	<code><a href="https://github.com/workshopper/goingnative">going-native</a></code>: An exploration of Node.js from the underside: native C++ add-ons.</li>
 </ul>
 			</div>
 		</div>
