--- a/nodejs-interactive-europe-2016-beerjs-at-hoppy-days/index.html
+++ b/nodejs-interactive-europe-2016-beerjs-at-hoppy-days/index.html
@@ -7,6 +7,7 @@ title: Beer.js
 		<div class="section typeset aside">
 			<div class="single-measure centered">
 				<img class="logo" src="../resources/logo/nodeschool-amsterdam-shadow.png">
+				<img class="logo logo-shadowed we-all-float-down-here" src="../resources/beerjs/beer-js.svg">
 			</div>
 		</div>
 		<div class="section typeset">
