Fixed beerjs page

--- a/nodejs-interactive-europe-2016-beerjs-at-hoppy-days/index.html
+++ b/nodejs-interactive-europe-2016-beerjs-at-hoppy-days/index.html
@@ -12,6 +12,7 @@ title: Beer.js
 		<div class="section typeset">
 			<div class="column column--main">
 				<h1>Beer.js</h1>
+				<h1> <a href="#" class="link">https://bit.ly/beerjs-amsterdam</a></h1>
 				<h4>Friday September 16th at <a class="link" href="hoppydays.nl">Hoppy Days!</a></h4>
 				<small>
 					kindly sponsored by <a href="http://rendit.nl" class="link">Rendit</a>
