--- a/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
+++ b/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
@@ -42,9 +42,9 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 		<div class="section typeset">
 			<div class="single-measure">
 				<p>
-					Hoppy Days is about 7 minutes walking away from De Beurs van Berlage.
+					Hoppy Days is about 6 minutes walking from Amsterdam Central Station.
 				</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2435.678218119528!2d4.893884887955651!3d52.376254493775264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x47c609c787f17ca7%3A0xfdc6eede688a772f!2sBeurs+van+Berlage%2C+Damrak%2C+Amsterdam!3m2!1d52.375174699999995!2d4.8960158!4m5!1s0x47c609c87892e211%3A0x84c5eabbd614b229!2shoppy+days!3m2!1d52.3774624!2d4.893612399999999!5e0!3m2!1sen!2snl!4v1473854929841" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d4871.498944223207!2d4.894308527899853!3d52.374962569147876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x47c609beb58b75af%3A0x764d0ffc0465fda9!2sInfo.nl%2C+Sint+Antoniesbreestraat%2C+Nieuwmarkt+en+Lastage%2C+Amsterdam%2C+Netherlands!3m2!1d52.371576!2d4.900263!4m5!1s0x47c609c87892e211%3A0x84c5eabbd614b229!2sHoppy+Days%2C+Koggestraat+1A%2C+1012+TA+Amsterdam%2C+Netherlands!3m2!1d52.3774624!2d4.893612399999999!5e0!3m2!1sen!2sus!4v1479213858513" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</div>
 
@@ -60,11 +60,6 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 					<p>
 						The shortest version is: Don't be a jerk, be excellent to eachother.</p>
 						<p>The longer version of our <a href="../code-of-conduct">code of conduct</a> provides a more subtle and elaborate perspective on our point of view.</p>
-
-
-
-
-
 				</div>
 			</div>
 		</div>
