--- a/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
+++ b/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
@@ -29,12 +29,12 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 					<br>
 					<p>
 						Have questions about JavaScript want to show or share something, or just want to hang out
-						and have a (non-alcoholic) drink? Then come join the fine people of NodeSchool Amsterdam and Full Stack Lab at
+						and have a (non-alcoholic) drink? Then come join the fine people of <a href="https://nodeschool.io/amsterdam" class="link">NodeSchool Amsterdam</a> and <a href="https://fullstacklab.eu/" class="link">Full Stack Lab</a> at
 						at <a href="http://www.hoppydays.nl">Hoppy Days</a>! *
 					</p>
 					<p>
 						Start: 2130 hrs,
-						Location: Koggestraat 1a, 1012 TA Amsterdam
+						Location: <a href="https://www.google.com/maps/place/Hoppy+Days/@52.3749626,4.8943085,16z/data=!4m22!1m16!4m15!1m6!1m2!1s0x47c609beb58b75af:0x764d0ffc0465fda9!2sInfo.nl,+Sint+Antoniesbreestraat,+Nieuwmarkt+en+Lastage,+Amsterdam,+Netherlands!2m2!1d4.900263!2d52.371576!1m6!1m2!1s0x47c609c87892e211:0x84c5eabbd614b229!2sHoppy+Days,+Koggestraat+1A,+1012+TA+Amsterdam,+Netherlands!2m2!1d4.8936124!2d52.3774624!3e3!3m4!1s0x47c609c87892e211:0x84c5eabbd614b229!8m2!3d52.3774624!4d4.8936124?hl=en" class="link">Koggestraat 1a, 1012 TA Amsterdam</a>
 					</p>
 				</div>
 			</div>
