--- a/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
+++ b/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
@@ -28,7 +28,7 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 					<h4>How about some drinks?</h4>
 					<br>
 					<p>
-						Have questions about JavaScript want to show or share something, or just want to hang out
+						Have questions about JavaScript, want to show or share something, or just want to hang out
 						and have a (non-alcoholic) drink? Then come join the fine people of <a href="https://nodeschool.io/amsterdam" class="link">NodeSchool Amsterdam</a> and <a href="https://fullstacklab.eu/" class="link">Full Stack Lab</a> at
 						at <a href="http://www.hoppydays.nl">Hoppy Days</a>! *
 					</p>
