--- a/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
+++ b/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 ---
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s); js.id=id;js.async=true;js.src="https://a248.e.akamai.net/secure.meetupstatic.com/s/script/2012676015776998360572/api/mu.btns.js?id=tlg1shnpajet1obdqj79gd4fmp";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","mu-bootjs");</script>
 <div class="main">
 	<section>
 		<div class="section typeset aside">
@@ -13,6 +14,7 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 			<div class="column column--main">
 				<h1>Beer.js</h1>
 				<h4>Friday November 18th at <a class="link" href="http://www.hoppydays.nl">Hoppy Days!</a></h4>
+				<a href="https://www.meetup.com/beerjs-amsterdam/events/235595544/" data-event="235595544" class="mu-rsvp-btn">RSVP</a>
 				<small>
 					kindly organised by <a href="https://nodeschool.io/amsterdam" class="link">NodeSchool Amsterdam</a> and <a href="https://fullstacklab.eu/" class="link">Full Stack Lab</a>
 				</small>
