--- a/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
+++ b/beerjs-x-nodeschool-x-fullstacklab-nov-2016/index.html
@@ -17,11 +17,13 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 					kindly organised by <a href="https://nodeschool.io/amsterdam" class="link">NodeSchool Amsterdam</a> and <a href="https://fullstacklab.eu/" class="link">Full Stack Lab</a>
 				</small>
 				<p>
-					<a href="https://www.meetup.com/beerjs-amsterdam/events/235595544/" data-event="235595544" class="mu-rsvp-btn">RSVP</a>
+					<a href="https://www.meetup.com/beerjs-amsterdam/events/235595544/" data-event="235595544" class="mu-rsvp-btn">RSVP</a> at meetup.com!
 				</p>
 			</div>
 			<div class="column column--sidebar">
-				<img class="logo" src="../resources/beerjs/beer-js.svg">
+				<a class="link logo" href="https://www.meetup.com/beerjs-amsterdam/events/235595544/">
+					<img src="../resources/beerjs/beer-js.svg">
+				</a>
 			</div>
 		</div>
 
@@ -33,7 +35,7 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 					<p>
 						Have questions about JavaScript, want to show or share something, or just want to hang out
 						and have a (non-alcoholic) drink? Then come join the fine people of <a href="https://nodeschool.io/amsterdam" class="link">NodeSchool Amsterdam</a> and <a href="https://fullstacklab.eu/" class="link">Full Stack Lab</a> at
-						at <a href="http://www.hoppydays.nl">Hoppy Days</a>! *
+						<a href="http://www.hoppydays.nl">Hoppy Days</a>! *
 					</p>
 					<p>
 						Start: 2130 hrs,
@@ -64,7 +66,7 @@ title: Beer.js x NodeSchool Amsterdam x Fullstacklab
 						The shortest version is: Don't be a jerk, be excellent to eachother.</p>
 						<p>The longer version of our <a href="../code-of-conduct">code of conduct</a> provides a more subtle and elaborate perspective on our point of view.</p>
 						<p>
-							<a href="https://www.meetup.com/beerjs-amsterdam/events/235595544/" data-event="235595544" class="mu-rsvp-btn">RSVP</a>
+							<a href="https://www.meetup.com/beerjs-amsterdam/events/235595544/" data-event="235595544" class="mu-rsvp-btn">RSVP</a> at meetup.com!
 						</p>
 				</div>
 			</div>
