We are not in Haarlem anymore

--- a/presentations/get-prepped/index.html
+++ b/presentations/get-prepped/index.html
@@ -124,7 +124,7 @@
 
 				<section data-transition="slide-in fade-out" data-autoslide="3000">
 					<h3>You&rsquo;re ready for NodeSchool to begin!</h3>
-					<p><span class="fragment" data-autoslide="4000">But in the mean time&hellip;</span> <span class="fragment" data-autoslide="6000">pop over to <a href="https://gitter.im/nodeschool/haarlem">https://gitter.im/nodeschool/haarlem</a> to join our Gitter channel</span></p>
+					<p><span class="fragment" data-autoslide="4000">But in the mean time&hellip;</span> <span class="fragment" data-autoslide="6000">pop over to <a href="https://gitter.im/nodeschool/amsterdam">https://gitter.im/nodeschool/amsterdam</a> to join our Gitter channel</span></p>
 				</section>
 
 			</div>
