--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -18,17 +18,17 @@ layout: default
 		<div class="yellow-bar">
 			<div class="section typeset">
 				<div class="single-measure">
-					<h4>We, the organizers of Nodeschool Amsterdam,</h4>
+					<h4>We, the organizers of NodeSchool Amsterdam,</h4>
 					<br>
 					<p>are dedicated to providing a harassment-free community for everyone, regardless of sex, gender identity or expression, sexual orientation, disability, physical appearance, age, body size, race, nationality, or religious beliefs. We do not tolerate
-						harassment of community members in any form. Participants violating these rules may be sanctioned or expelled from the community at the discretion of the organizers of Nodeschool Amsterdam.</p>
+						harassment of community members in any form. Participants violating these rules may be sanctioned or expelled from the community at the discretion of the organizers of NodeSchool Amsterdam.</p>
 				</div>
 			</div>
 		</div>
 		<div class="section typeset">
 			<div class="single-measure">
 				<p>Harassment includes offensive verbal or written comments related to sex, gender identity or expression, sexual orientation, disability, physical appearance, age, body size, race, nationality, or religious beliefs, deliberate intimidation, threats,
-					stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Sexual language and imagery is not appropriate for any events at Nodeschool Amsterdam
+					stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Sexual language and imagery is not appropriate for any events at NodeSchool Amsterdam
 					meetups or in any related communication channels. Community members asked to stop any harassing behavior are expected to comply immediately. Sponsors and presenters are also subject to the anti-harassment policy.
 				</p>
 			</div>
@@ -36,7 +36,7 @@ layout: default
 		<div class="yellow-bar">
 			<div class="section typeset">
 				<div class="single-measure">
-					<p>If a community member engages in harassing behavior, the organizers of Nodeschool Amsterdam may take any action they deem appropriate, including warning the offender or expulsion from the community. If you are being harassed, notice that someone
+					<p>If a community member engages in harassing behavior, the organizers of NodeSchool Amsterdam may take any action they deem appropriate, including warning the offender or expulsion from the community. If you are being harassed, notice that someone
 						else is being harassed, or have any concerns, please contact an organizer immediately.</p>
 				</div>
 			</div>
